Changes to the home page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
     
     <section class="landing">
-        <h1>Hi, I'm Your Name</h1>
+        <h1>Hi, I'm Libby Griffiths</h1>
         <p>Software Developer | Web Developer</p>
         <p>Welcome to my personal website. I'm passionate about building scalable web applications and learning new technologies.</p>
         <a href="portfolio.html">View My Projects</a>
