--- a/about.html
+++ b/about.html
@@ -5,42 +5,136 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="About Me - Software Developer | Web Developer">
     <title>About - Your Name</title>
-    <link rel="stylesheet" href="assets/styles.css">
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&family=Pacifico&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="contact.html">Contact</a></li>
+    <div class="container">
+        <header>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
+
+        <section class="about">
+            <h1 class="about-title">Who Am I?</h1>
+            <p class="about-intro">Hey there! I'm Your Name, a creative and passionate developer who loves turning ideas into reality through code.</p>
+            <img src="profile.jpg" alt="Your Name" class="profile-img">
+            <p class="about-text">I graduated from [University] with a degree in [Field] and have experience in both front-end and back-end development. My passion lies in crafting seamless user experiences and designing modern, intuitive applications.</p>
+            <a href="Your_Resume.pdf" download class="btn">Download My Resume</a>
+
+            <h2 class="skills-title">My Tech Toolbox</h2>
+            <ul class="skills-list">
+                <li>JavaScript</li>
+                <li>React.js</li>
+                <li>Node.js</li>
+                <li>HTML5 & CSS3</li>
+                <li>Git & GitHub</li>
+                <li>Bootstrap & TailwindCSS</li>
             </ul>
-        </nav>
-    </header>
-
-    <section class="about">
-        <h1>About Me</h1>
-        <p>My name is Your Name. I am a software developer passionate about building web applications.</p>
-        <p>I graduated from [University] with a degree in [Field]. I have experience in front-end development using HTML, CSS, and JavaScript, and back-end development with Node.js and Express. I am continuously learning new technologies and enhancing my skill set.</p>
-        <a href="Your_Resume.pdf" download>Download Resume</a>
-
-        <h2>Skills</h2>
-        <ul>
-            <li>JavaScript</li>
-            <li>React.js</li>
-            <li>Node.js</li>
-            <li>HTML5, CSS3</li>
-            <li>Git</li>
-            <li>Bootstrap, TailwindCSS</li>
-        </ul>
-    </section>
+        </section>
+    </div>
     
     <footer>
         <p>&copy; 2025 Your Name. All Rights Reserved.</p>
     </footer>
 
-    <script src="assets/script.js"></script>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Inter', sans-serif;
+        }
+        body {
+            background: #fafafa;
+            color: #333;
+        }
+        .container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            height: 100vh;
+            justify-content: center;
+            text-align: center;
+            padding: 40px;
+        }
+        nav ul {
+            display: flex;
+            list-style: none;
+            gap: 20px;
+            margin-bottom: 20px;
+        }
+        nav ul li a {
+            text-decoration: none;
+            color: #333;
+            font-weight: 500;
+            transition: color 0.3s ease;
+        }
+        nav ul li a:hover {
+            color: #007BFF;
+        }
+        .about-title {
+            font-size: 3rem;
+            font-family: 'Pacifico', cursive;
+            color: #007BFF;
+            margin-bottom: 20px;
+        }
+        .about-intro {
+            font-size: 1.5rem;
+            font-weight: 400;
+            margin-bottom: 20px;
+        }
+        .profile-img {
+            width: 200px;
+            height: 200px;
+            border-radius: 50%;
+            object-fit: cover;
+            margin-bottom: 20px;
+        }
+        .about-text {
+            font-size: 1.2rem;
+            margin-bottom: 20px;
+        }
+        .btn {
+            text-decoration: none;
+            background: #007BFF;
+            color: white;
+            padding: 12px 25px;
+            border-radius: 30px;
+            font-size: 1.2rem;
+            transition: background 0.3s ease;
+        }
+        .btn:hover {
+            background: #0056b3;
+        }
+        .skills-title {
+            font-size: 2rem;
+            margin-top: 30px;
+            font-weight: bold;
+        }
+        .skills-list {
+            list-style: none;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 15px;
+            margin-top: 20px;
+        }
+        .skills-list li {
+            background: #007BFF;
+            color: white;
+            padding: 10px 20px;
+            border-radius: 20px;
+            font-size: 1rem;
+            font-weight: 500;
+        }
+    </style>
 </body>
 </html>
