Adding about me text

--- a/about.html
+++ b/about.html
@@ -24,7 +24,9 @@
 
         <section class="about">
             <h1 class="about-title">Who Am I?</h1>
-            <p class="about-text">I graduated from [University] with a degree in [Field] and have experience in both front-end and back-end development. My passion lies in crafting seamless user experiences and designing modern, intuitive applications.</p>
+            <p class="about-text">I am a motivated software engineer with a strong foundation in Computer Science and hands-on experience in developing scalable, innovative solutions. I am skilled in C#, Python, and JavaScript, and familiar with Java and C/C++ syntax. I have a solid understanding of object-oriented programming, distributed systems, and software optimization, which I have honed through both academic studies and professional experience. I am eager to bring my technical expertise, adaptability, and customer-focused approach to Amazon's Software Development team to deliver impactful technologies at scale.
+                
+                I am currently pursuing a BSc in Software Engineering at Bournemouth University, where I have focused on distributed systems, algorithm optimization, and object-oriented programming. I have gained practical experience through a placement at Drilling Systems, where I designed and implemented advanced training simulations, collaborated with cross-functional teams, and participated in Agile workflows. Additionally, I have held roles as a Retail Assistant at Primark and a Sales Assistant at Clarks Shoe Store, where I developed strong problem-solving, multitasking, and customer service skills.</p>
             <a href="Your_Resume.pdf" download class="btn">Download My Resume</a>
 
             <h2 class="skills-title">My Tech Toolbox</h2>
