--- a/about.html
+++ b/about.html
@@ -91,6 +91,12 @@
             font-weight: 400;
             margin-bottom: 20px;
         }
+        .about-text {
+            font-size: 1.5rem;
+            font-weight: 400;
+            margin-bottom: 20px;
+            width: 50%;
+        }
         .profile-img {
             width: 200px;
             height: 200px;
