More CSS editing

--- a/about.html
+++ b/about.html
@@ -96,6 +96,8 @@
             font-weight: 400;
             margin-bottom: 20px;
             width: 50%;
+            position: centre;
+            text-align: center;
         }
         .profile-img {
             width: 200px;
