--- a/about.html
+++ b/about.html
@@ -91,14 +91,6 @@
             font-weight: 400;
             margin-bottom: 20px;
         }
-        .about-text {
-            font-size: 1.5rem;
-            font-weight: 400;
-            margin-bottom: 20px;
-            width: 50%;
-            position: centre;
-            text-align: center;
-        }
         .profile-img {
             width: 200px;
             height: 200px;
@@ -109,6 +101,7 @@
         .about-text {
             font-size: 1.2rem;
             margin-bottom: 20px;
+            max-width: 600px;
         }
         .btn {
             text-decoration: none;
