--- a/about.html
+++ b/about.html
@@ -101,7 +101,10 @@
         .about-text {
             font-size: 1.2rem;
             margin-bottom: 20px;
-            max-width: 600px;
+            max-width: 800px;
+            margin-left: auto;
+            margin-right: auto;
+            padding: 0 20px; /* Add some padding to the sides */
         }
         .btn {
             text-decoration: none;
