--- a/about.html
+++ b/about.html
@@ -86,11 +86,6 @@
             color: #007BFF;
             margin-bottom: 20px;
         }
-        .about-intro {
-            font-size: 1.5rem;
-            font-weight: 400;
-            margin-bottom: 20px;
-        }
         .profile-img {
             width: 200px;
             height: 200px;
@@ -108,6 +103,7 @@
         }
         .btn {
             text-decoration: none;
+            margin-top: 20px;
             background: #007BFF;
             color: white;
             padding: 12px 25px;
