--- a/about.html
+++ b/about.html
@@ -39,10 +39,6 @@
             </ul>
         </section>
     </div>
-    
-    <footer>
-        <p>&copy; 2025 Your Name. All Rights Reserved.</p>
-    </footer>
 
     <style>
         * {
@@ -59,6 +55,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            height: 100vh;
             justify-content: center;
             text-align: center;
             padding: 40px;
