--- a/about.html
+++ b/about.html
@@ -84,7 +84,6 @@
             font-size: 1.2rem;
             margin-bottom: 20px;
             max-width: 800px;
-            padding: 0 20px;
             line-height: 1.6;
         }
         .highlight {
@@ -143,6 +142,18 @@
             to {
                 opacity: 1;
                 transform: translateY(0);
+            }
+        }
+        @media (max-width: 768px) {
+            .about-title {
+                font-size: 2.5rem;
+            }
+            .about-text {
+                font-size: 1rem;
+            }
+            .btn {
+                font-size: 1rem;
+                padding: 10px 20px;
             }
         }
     </style>
