--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
             max-width: 800px;
             line-height: 1.6;
             text-align: center;
-            margin: auto 20;
+            margin: 0 auto;
         }
         .highlight {
             font-weight: bold;
