Stopping the button from overlapping

--- a/about.html
+++ b/about.html
@@ -94,6 +94,7 @@
         .btn {
             text-decoration: none;
             margin-top: 20px;
+            margin-top: 20px;
             background: #007BFF;
             color: white;
             padding: 12px 25px;
