--- a/about.html
+++ b/about.html
@@ -86,6 +86,7 @@
             line-height: 1.6;
             text-align: center;
             margin: 0 auto;
+            padding-bottom: 50px;
         }
         .highlight {
             font-weight: bold;
