--- a/portfolio.html
+++ b/portfolio.html
@@ -92,6 +92,7 @@
             margin-bottom: 20px;
             max-width: 800px;
             line-height: 1.6;
+            padding-bottom: 30px;
         }
         .projects-grid {
             display: grid;
