replacing blue to green

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             transition: color 0.3s ease;
         }
         nav ul li a:hover {
-            color: #007BFF;
+            color: #75975e;
         }
         .hero-content {
             max-width: 600px;
@@ -97,7 +97,7 @@
         .welcome {
             font-size: 4rem;
             font-family: 'Pacifico', cursive;
-            color: #007BFF;
+            color: #75975e;
             margin-bottom: 20px;
         }
         .profile-img {
@@ -118,7 +118,7 @@
         }
         .btn {
             text-decoration: none;
-            background: #007BFF;
+            background: #75975e;
             color: white;
             padding: 12px 25px;
             border-radius: 30px;
