--- a/about.html
+++ b/about.html
@@ -71,12 +71,12 @@
             transition: color 0.3s ease;
         }
         nav ul li a:hover {
-            color: #007BFF;
+            color: #75975e;
         }
         .about-title {
             font-size: 3rem;
             font-family: 'Pacifico', cursive;
-            color: #007BFF;
+            color: #75975e;
             margin-bottom: 20px;
         }
         .about-text {
@@ -90,13 +90,13 @@
         }
         .highlight {
             font-weight: bold;
-            color: #007BFF;
+            color: #75975e;
         }
         .btn {
             text-decoration: none;
             margin-top: 20px;
             margin-top: 20px;
-            background: #007BFF;
+            background: #75975e;
             color: white;
             padding: 12px 25px;
             border-radius: 30px;
@@ -120,7 +120,7 @@
             margin-top: 20px;
         }
         .skills-list li {
-            background: #007BFF;
+            background: #75975e;
             color: white;
             padding: 10px 20px;
             border-radius: 20px;
