--- a/portfolio.html
+++ b/portfolio.html
@@ -79,12 +79,12 @@
             transition: color 0.3s ease;
         }
         nav ul li a:hover {
-            color: #007BFF;
+            color: #75975e;
         }
         .portfolio-title {
             font-size: 3rem;
             font-family: 'Pacifico', cursive;
-            color: #007BFF;
+            color: #75975e;
             margin-bottom: 20px;
         }
         .portfolio-text {
@@ -122,7 +122,7 @@
         }
         .btn {
             text-decoration: none;
-            background: #007BFF;
+            background: #75975e;
             color: white;
             padding: 10px 20px;
             border-radius: 30px;
