Changing hover button color

--- a/about.html
+++ b/about.html
@@ -104,7 +104,7 @@
             transition: background 0.3s ease;
         }
         .btn:hover {
-            background: #0056b3;
+            background: #c7DDB5;
         }
         .skills-title {
             font-size: 2rem;
