--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             transition: background 0.3s ease;
         }
         .btn:hover {
-            background: #0056b3;
+            background: #c7DDB5;
         }
         @media (max-width: 768px) {
             .about-title {
