--- a/about.html
+++ b/about.html
@@ -130,7 +130,7 @@
         }
         .skills-list li:hover {
             transform: scale(1.1);
-            background: #0056b3;
+            background: #c7DDB5;
         }
         .fade-in {
             opacity: 0;
