--- a/index.html
+++ b/index.html
@@ -38,34 +38,41 @@
             box-sizing: border-box;
             font-family: 'Inter', sans-serif;
         }
-        /* Apply to the entire body */
+
         body {
             background: #fafafa;
             color: #333;
-            overflow: scroll; /* Ensure scrolling is enabled */
+            overflow-x: hidden;
+            padding-top: 60px; /* Prevent content from being hidden behind navbar */
         }
 
-        /* Make the scrollbar invisible on all browsers */
-        body::-webkit-scrollbar {
-            width: 8px; /* width of the scrollbar */
+        header {
+            position: fixed;
+            top: 0;
+            width: 100%;
+            background: white;
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+            padding: 15px 0;
+            text-align: center;
+            z-index: 1000;
         }
 
-        body::-webkit-scrollbar-track {
-            background: transparent; /* make the track invisible */
+        nav ul {
+            display: flex;
+            justify-content: center;
+            list-style: none;
+            gap: 20px;
         }
 
-        body::-webkit-scrollbar-thumb {
-            background: transparent; /* make the thumb invisible */
+        nav ul li a {
+            text-decoration: none;
+            color: #333;
+            font-weight: 500;
+            transition: color 0.3s ease;
         }
 
-        body::-webkit-scrollbar-thumb:hover {
-            background: transparent; /* keep the thumb invisible on hover */
-        }
-
-        /* For Firefox */
-        body {
-            scrollbar-width: thin;
-            scrollbar-color: transparent transparent;
+        nav ul li a:hover {
+            color: #75975e;
         }
 
         .container {
@@ -76,30 +83,18 @@
             justify-content: center;
             text-align: center;
         }
-        nav ul {
-            display: flex;
-            list-style: none;
-            gap: 20px;
-            margin-bottom: 20px;
-        }
-        nav ul li a {
-            text-decoration: none;
-            color: #333;
-            font-weight: 500;
-            transition: color 0.3s ease;
-        }
-        nav ul li a:hover {
-            color: #75975e;
-        }
+
         .hero-content {
             max-width: 600px;
         }
+
         .welcome {
             font-size: 4rem;
             font-family: 'Pacifico', cursive;
             color: #75975e;
             margin-bottom: 20px;
         }
+
         .profile-img {
             width: 220px;
             height: 220px;
@@ -107,15 +102,18 @@
             object-fit: cover;
             margin-bottom: 20px;
         }
+
         h2 {
             font-size: 2.5rem;
             font-weight: 700;
             margin-bottom: 10px;
         }
+
         p {
             font-size: 1.2rem;
             margin-bottom: 20px;
         }
+
         .btn {
             text-decoration: none;
             background: #75975e;
@@ -125,21 +123,38 @@
             font-size: 1.2rem;
             transition: background 0.3s ease;
         }
+
         .btn:hover {
             background: #c7DDB5;
         }
+
         @media (max-width: 768px) {
-            .about-title {
-                font-size: 2.5rem;
+            nav ul {
+                flex-direction: column;
+                gap: 10px;
             }
-            .about-text {
+
+            .welcome {
+                font-size: 3rem;
+            }
+
+            .profile-img {
+                width: 180px;
+                height: 180px;
+            }
+
+            h2 {
+                font-size: 2rem;
+            }
+
+            p {
                 font-size: 1rem;
             }
+
             .btn {
                 font-size: 1rem;
                 padding: 10px 20px;
             }
-
         }
     </style>
 </body>
