--- a/index.html
+++ b/index.html
@@ -62,6 +62,11 @@
         justify-content: center;
         list-style: none;
         gap: 20px;
+        flex-direction: row;
+    }
+
+    nav ul li {
+        display: inline;
     }
 
     nav ul li a {
@@ -130,8 +135,9 @@
 
     @media (max-width: 768px) {
         nav ul {
-            flex-direction: column;
-            gap: 10px;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: center;
         }
 
         .welcome {
