--- a/index.html
+++ b/index.html
@@ -9,17 +9,14 @@
 </head>
 <body>
     <div class="container">
-        <header>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </nav>
-        </header>
-        
+        <!-- Simple text links as navigation -->
+        <div class="navigation">
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="portfolio.html">Portfolio</a>
+            <a href="contact.html">Contact</a>
+        </div>
+
         <section class="hero">
             <div class="hero-content">
                 <h1 class="welcome">Welcome!</h1>
@@ -43,40 +40,25 @@
         background: #fafafa;
         color: #333;
         overflow-x: hidden;
-        padding-top: 60px; /* Prevent content from being hidden behind navbar */
+        padding-top: 60px; /* Prevent content from being hidden behind navigation */
     }
 
-    header {
-        position: fixed;
-        top: 0;
-        width: 100%;
-        background: white;
-        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-        padding: 15px 0;
-        text-align: center;
-        z-index: 1000;
-    }
-
-    nav ul {
+    .navigation {
         display: flex;
         justify-content: center;
-        list-style: none;
-        gap: 20px;
-        flex-direction: row;
+        gap: 30px;
+        margin-bottom: 20px;
     }
 
-    nav ul li {
-        display: inline;
-    }
-
-    nav ul li a {
+    .navigation a {
         text-decoration: none;
         color: #333;
         font-weight: 500;
+        font-size: 1.2rem;
         transition: color 0.3s ease;
     }
 
-    nav ul li a:hover {
+    .navigation a:hover {
         color: #75975e;
     }
 
@@ -134,10 +116,8 @@
     }
 
     @media (max-width: 768px) {
-        nav ul {
-            flex-direction: row;
-            flex-wrap: wrap;
-            justify-content: center;
+        .navigation {
+            gap: 20px;
         }
 
         .welcome {
