--- a/about.html
+++ b/about.html
@@ -9,16 +9,13 @@
 </head>
 <body>
     <div class="container">
-        <header>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </nav>
-        </header>
+        <!-- Simple text links as navigation -->
+        <div class="navigation">
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="portfolio.html">Portfolio</a>
+            <a href="contact.html">Contact</a>
+        </div>
 
         <section class="about fade-in">
             <h1 class="about-title">Who Am I?</h1>
@@ -49,6 +46,26 @@
             background: #fafafa;
             color: #333;
         }
+
+        .navigation {
+            display: flex;
+            justify-content: center;
+            gap: 30px;
+            margin-bottom: 20px;
+        }
+
+        .navigation a {
+            text-decoration: none;
+            color: #333;
+            font-weight: 500;
+            font-size: 1.2rem;
+            transition: color 0.3s ease;
+        }
+
+        .navigation a:hover {
+            color: #75975e;
+        }
+
         .container {
             display: flex;
             flex-direction: column;
@@ -58,27 +75,14 @@
             text-align: center;
             padding: 40px;
         }
-        nav ul {
-            display: flex;
-            list-style: none;
-            gap: 20px;
-            margin-bottom: 20px;
-        }
-        nav ul li a {
-            text-decoration: none;
-            color: #333;
-            font-weight: 500;
-            transition: color 0.3s ease;
-        }
-        nav ul li a:hover {
-            color: #75975e;
-        }
+
         .about-title {
             font-size: 3rem;
             font-family: 'Pacifico', cursive;
             color: #75975e;
             margin-bottom: 20px;
         }
+
         .about-text {
             font-size: 1.2rem;
             margin-bottom: 20px;
@@ -88,13 +92,14 @@
             margin: 0 auto;
             padding-bottom: 30px;
         }
+
         .highlight {
             font-weight: bold;
             color: #75975e;
         }
+
         .btn {
             text-decoration: none;
-            margin-top: 20px;
             margin-top: 20px;
             background: #75975e;
             color: white;
@@ -103,14 +108,17 @@
             font-size: 1.2rem;
             transition: background 0.3s ease;
         }
+
         .btn:hover {
             background: #c7DDB5;
         }
+
         .skills-title {
             font-size: 2rem;
             margin-top: 30px;
             font-weight: bold;
         }
+
         .skills-list {
             list-style: none;
             display: flex;
@@ -119,6 +127,7 @@
             gap: 15px;
             margin-top: 20px;
         }
+
         .skills-list li {
             background: #75975e;
             color: white;
@@ -128,15 +137,18 @@
             font-weight: 500;
             transition: transform 0.3s ease;
         }
+
         .skills-list li:hover {
             transform: scale(1.1);
             background: #c7DDB5;
         }
+
         .fade-in {
             opacity: 0;
             transform: translateY(20px);
             animation: fadeIn 1s forwards ease-in-out;
         }
+
         @keyframes fadeIn {
             from {
                 opacity: 0;
@@ -147,6 +159,7 @@
                 transform: translateY(0);
             }
         }
+
         @media (max-width: 768px) {
             .about-title {
                 font-size: 2.5rem;
