--- a/index.html
+++ b/index.html
@@ -135,7 +135,8 @@
 
         p {
             font-size: 1rem;
-            padding: 20px;
+            padding-right: 20px;
+            padding-left: 20px;
         }
 
         .btn {
