--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Personal Website - Software Developer | Web Developer">
-    <title>Your Name - Developer & Designer</title>
+    <title>Libby Griffiths - Developer & Designer</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&family=Pacifico&display=swap" rel="stylesheet">
 </head>
 <body>
