--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Contact Me - Software Developer | Web Developer">
-    <title>Contact - Libby Griffiths</title>
+    <title>Contact - Your Name</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&family=Pacifico&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -22,10 +22,10 @@
             <p class="contact-text">I'd love to hear from you! Whether you have a question, feedback, or want to collaborate, feel free to reach out. I'm always open to new opportunities.</p>
 
             <h2 class="contact-subtitle">Contact Information</h2>
-            <p>Email: <a href="mailto:yourname@example.com" class="contact-link">yourname@example.com</a></p>
-            <p>Phone: <a href="tel:+1234567890" class="contact-link">+123 456 7890</a></p>
+            <p>Email: <a href="mailto:libbygriffiths00@gmail.com" class="contact-link">libbygriffiths00@gmail.com</a></p>
+            <p>Phone: <a href="tel:+44 7976125066" class="contact-link">+44 7976125066</a></p>
 
-            <a href="mailto:yourname@example.com" class="btn">Send me an Email</a>
+            <a href="mailto:libbygriffiths00@gmail.com" class="btn">Send me an Email</a>
         </section>
     </div>
 
@@ -64,8 +64,8 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            height: 100vh;
-            justify-content: center;
+            height: auto; /* Allow content to flow properly */
+            justify-content: flex-start;
             text-align: center;
             padding: 40px;
         }
@@ -104,7 +104,7 @@
 
         .btn {
             text-decoration: none;
-            margin-top: 20px;
+            margin-top: 40px; /* Increased margin-top to separate button from text */
             background: #75975e;
             color: white;
             padding: 12px 25px;
