--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="About Me - Software Developer | Web Developer">
-    <title>About - Libby Griffiths</title>
+    <title>About - Your Name</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&family=Pacifico&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -42,9 +42,12 @@
             box-sizing: border-box;
             font-family: 'Inter', sans-serif;
         }
+
         body {
             background: #fafafa;
             color: #333;
+            padding-top: 80px; /* Adjusted padding to account for the fixed navbar */
+            overflow-y: scroll; /* Ensures scrollbar appears when needed */
         }
 
         .navigation {
@@ -70,8 +73,8 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            height: 100vh;
-            justify-content: center;
+            min-height: 100vh; /* Ensures the content fills at least the height of the viewport */
+            justify-content: flex-start;
             text-align: center;
             padding: 40px;
         }
@@ -100,7 +103,7 @@
 
         .btn {
             text-decoration: none;
-            margin-top: 20px;
+            margin-top: 40px;
             background: #75975e;
             color: white;
             padding: 12px 25px;
@@ -164,14 +167,27 @@
             .about-title {
                 font-size: 2.5rem;
             }
+
             .about-text {
                 font-size: 1rem;
             }
+
             .btn {
                 font-size: 1rem;
                 padding: 10px 20px;
             }
         }
+
+        /* Invisible scrollbar styling */
+        ::-webkit-scrollbar {
+            width: 0px;
+            background: transparent;
+        }
+
+        ::-webkit-scrollbar-thumb {
+            background: transparent;
+        }
     </style>
 </body>
 </html>
+
