--- a/index.html
+++ b/index.html
@@ -144,6 +144,17 @@
             padding: 10px 20px;
         }
     }
+    @media (min-width: 1024px) {
+    body {
+        overflow: hidden; /* Hide scroll bar on desktop */
+    }
+    .container {
+        display: block;
+        max-width: 1200px; /* Adjust the max-width as needed for desktop */
+        margin: 0 auto;
+        height: auto;
+    }
+    }
 </style>
 </body>
 </html>
