--- a/portfolio.html
+++ b/portfolio.html
@@ -81,6 +81,7 @@
             text-decoration: none;
             color: #333;
             font-weight: 500;
+            font-size: 1.2rem;
             transition: color 0.3s ease;
         }
         nav ul li a:hover {
