--- a/portfolio.html
+++ b/portfolio.html
@@ -9,16 +9,12 @@
 </head>
 <body>
     <div class="container">
-        <header>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </nav>
-        </header>
+        <div class="navigation">
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="portfolio.html">Portfolio</a>
+            <a href="contact.html">Contact</a>
+        </div>
 
         <section class="portfolio fade-in">
             <h1 class="portfolio-title">My Work</h1>
@@ -70,21 +66,22 @@
             padding: 40px;
             box-sizing: border-box;
         }
-        nav ul {
+        .navigation {
             display: flex;
-            list-style: none;
-            gap: 20px;
-            margin-bottom: 20px;
             justify-content: center;
+            gap: 30px;
+            margin-bottom: 20px;
         }
-        nav ul li a {
+
+        .navigation a {
             text-decoration: none;
             color: #333;
             font-weight: 500;
             font-size: 1.2rem;
             transition: color 0.3s ease;
         }
-        nav ul li a:hover {
+
+        .navigation a:hover {
             color: #75975e;
         }
         .portfolio-title {
