--- a/portfolio.html
+++ b/portfolio.html
@@ -9,12 +9,16 @@
 </head>
 <body>
     <div class="container">
-        <div class="navigation">
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="portfolio.html">Portfolio</a>
-            <a href="contact.html">Contact</a>
-        </div>
+        <header>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
 
         <section class="portfolio fade-in">
             <h1 class="portfolio-title">My Work</h1>
