--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
         body {
             background: #fafafa;
             color: #333;
-            /*padding-top: 80px; Adjusted padding to account for the fixed navbar */
+            padding-top: 80px; /* Adjusted padding to account for the fixed navbar */
             overflow-y: scroll; /* Ensures scrollbar appears when needed */
         }
 
@@ -164,6 +164,12 @@
         }
 
         @media (max-width: 768px) {
+
+            body {
+            background: #fafafa;
+            color: #333;
+            padding-top: 20px; /* Adjusted padding to account for the fixed navbar */
+            }
             .about-title {
                 font-size: 2.5rem;
             }
