--- a/contact.html
+++ b/contact.html
@@ -102,6 +102,7 @@
 
         .contact-link {
             color: #75975e;
+            padding: 20px;
             text-decoration: none;
         }
 
