Going in the right direction

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -55,7 +55,6 @@
         body {
             background: #fafafa;
             color: #333;
-            padding-top: 80px; /* Adjusted padding to account for the fixed navbar */
             overflow-y: scroll; /* Ensures scrollbar appears when needed */
         }
 
@@ -208,4 +207,3 @@
     </style>
 </body>
 </html>
-
