--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
         body {
             background: #fafafa;
             color: #333;
-            padding-top: 80px; /* Adjusted padding to account for the fixed navbar */
+            /*padding-top: 80px;  Adjusted padding to account for the fixed navbar */
             overflow-y: scroll; /* Ensures scrollbar appears when needed */
         }
 
@@ -73,10 +73,9 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            min-height: 100vh; /* Ensures the content fills at least the height of the viewport */
-            justify-content: flex-start;
+            height: 100vh;
+            justify-content: center;
             text-align: center;
-            padding: 40px;
         }
 
         .about-title {
