Why did i break it

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         background: #fafafa;
         color: #333;
         overflow-x: hidden;
-        /*padding-top: 60px; Prevent content from being hidden behind navigation */
+        padding-top: 60px; /* Prevent content from being hidden behind navigation */
     }
 
     .navigation {
@@ -148,7 +148,7 @@
     body {
         overflow: hidden; /* Hide scroll bar on desktop */
     }
-    }
+}
 </style>
 </body>
 </html>
