--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@
         body {
             background: #fafafa;
             color: #333;
-            /*padding-top: 80px;  Adjusted padding to account for the fixed navbar */
+            padding-top: 80px; /* Adjusted padding to account for the fixed navbar */
             overflow-y: scroll; /* Ensures scrollbar appears when needed */
         }
 
@@ -182,7 +182,7 @@
             color: #333;
             padding-top: 20px; /* Adjusted padding to account for the fixed navbar */
             }
-
+            
             .projects-grid {
                 grid-template-columns: 1fr; /* Ensures a single column layout on smaller screens */
             }
