--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Contact Me - Software Developer | Web Developer">
-    <title>Contact - Libby Griffiths</title>
+    <title>Contact - Your Name</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&family=Pacifico&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -22,8 +22,10 @@
             <p class="contact-text">I'd love to hear from you! Whether you have a question, feedback, or want to collaborate, feel free to reach out. I'm always open to new opportunities.</p>
 
             <h2 class="contact-subtitle">Contact Information</h2>
-            <p>Email: <a href="mailto:libbygriffiths00@gmail.com" class="contact-link">libbygriffiths00@gmail.com</a></p>
-            <p>Phone: <a href="tel:+44 7976125066" class="contact-link">+44 7976125066</a></p>
+            <div class="contact-info">
+                <p>Email: <a href="mailto:libbygriffiths00@gmail.com" class="contact-link">libbygriffiths00@gmail.com</a></p>
+                <p>Phone: <a href="tel:+44 7976125066" class="contact-link">+44 7976125066</a></p>
+            </div>
 
             <a href="mailto:libbygriffiths00@gmail.com" class="btn">Send me an Email</a>
         </section>
@@ -36,22 +38,9 @@
             box-sizing: border-box;
             font-family: 'Inter', sans-serif;
         }
-
-        .container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            text-align: center;
-            padding: 40px;
-            width: 90%;
-            max-width: 800px;
-        }
-
         body {
             background: #fafafa;
             color: #333;
-            /*padding-top: 80px;  Adjusted padding to account for the fixed navbar */
-            overflow-y: scroll; /* Ensures scrollbar appears when needed */
         }
 
         .navigation {
@@ -73,8 +62,14 @@
             color: #75975e;
         }
 
-        .contact {
-            padding-bottom: 60px; /* Ensures button doesn't overlap content */
+        .container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            height: auto; /* Allow content to flow properly */
+            justify-content: flex-start;
+            text-align: center;
+            padding: 40px;
         }
 
         .contact-title {
@@ -91,12 +86,25 @@
             line-height: 1.6;
             text-align: center;
             margin: 0 auto;
+            padding-bottom: 30px;
         }
 
         .contact-subtitle {
             font-size: 2rem;
             margin-top: 30px;
             font-weight: bold;
+            padding-bottom: 15px;
+        }
+
+        .contact-info {
+            padding: 20px 30px; /* Added padding around contact info */
+            background-color: #f1f1f1;
+            border-radius: 10px;
+            margin-bottom: 40px; /* Space between contact info and the button */
+            max-width: 600px;
+            margin-left: auto;
+            margin-right: auto;
+            text-align: left;
         }
 
         .contact-link {
@@ -110,14 +118,13 @@
 
         .btn {
             text-decoration: none;
-            margin-top: 20px; /* Increased margin for better separation */
+            margin-top: 40px; /* Increased margin-top to separate button from text */
             background: #75975e;
             color: white;
             padding: 12px 25px;
             border-radius: 30px;
             font-size: 1.2rem;
             transition: background 0.3s ease;
-            display: inline-block;
         }
 
         .btn:hover {
